// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/intentDetail can render intent with special characters correctly 1`] = `
<div
  className="zui-action-panel list-box"
>
  <div
    className="list-content"
  >
    
    <div
      className="zui-expansion zui-color--white"
      style={
        Object {
          "margin": "12px",
        }
      }
    >
      <div
        className="zui-expansion-header"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          className="zui-expansion-arrow"
        >
          <i
            className="zui-expansion-arrow-icon material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            className="zui-expansion-title"
            style={null}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "fontWeight": "900",
                }
              }
            >
              <i
                className="material-icons"
                style={
                  Object {
                    "marginLeft": "-8px",
                    "paddingRight": "4px",
                    "paddingTop": "12px",
                  }
                }
              >
                account_circle
              </i>
              input
              <i
                className="help_icon material-icons"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex="0"
              >
                help
              </i>
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="zui-expansion-content"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        
        <li
          className="addActionItem  onFocusAction actionItem mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <div
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              aria-label="Add an input sentence"
              className="contenteditable"
              id="ae_content"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              spellCheck={false}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flex": 1,
                  "minHeight": "40px",
                }
              }
              tabIndex={0}
            >
              <span
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexWrap": "wrap",
                    "width": "100%",
                  }
                }
              >
                <span
                  data="text"
                  id="ae_start"
                  onClick={[Function]}
                  onInput={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                      "flex": "1",
                      "minHeight": "15px",
                      "padding": "0 4px",
                    }
                  }
                  tabIndex={1}
                />
              </span>
              <div
                style={
                  Object {
                    "left": "19px",
                    "pointerEvents": "none",
                    "position": "absolute",
                  }
                }
              >
                Add an input sentence
              </div>
            </div>
          </div>
          <div />
        </li>
        <ul
          className="mdc-list"
          style={
            Object {
              "margin": "0 8px 16px 8px",
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        />
      </div>
    </div>
    <div
      className="zui-expansion zui-color--white"
      style={
        Object {
          "margin": "12px",
        }
      }
    >
      <div
        className="zui-expansion-header"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          className="zui-expansion-arrow"
        >
          <i
            className="zui-expansion-arrow-icon material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            className="zui-expansion-title"
            style={null}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "fontWeight": "900",
                }
              }
            >
              <i
                className="material-icons"
                style={
                  Object {
                    "backgroundImage": "url(../images/opla-avatar.png)",
                    "backgroundPositionX": "2px",
                    "backgroundPositionY": "14px",
                    "backgroundRepeat": "no-repeat",
                    "backgroundSize": "20px",
                    "color": "transparent",
                    "marginLeft": "-8px",
                    "paddingRight": "4px",
                    "paddingTop": "12px",
                  }
                }
              >
                account_circle
              </i>
              output
              <i
                className="help_icon material-icons"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex="0"
              >
                help
              </i>
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="zui-expansion-content"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        
        <li
          className="addActionItem  onFocusAction actionItem mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <div
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              aria-label="Add an output response"
              className="contenteditable"
              id="ae_content"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              spellCheck={false}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flex": 1,
                  "minHeight": "40px",
                }
              }
              tabIndex={0}
            >
              <span
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexWrap": "wrap",
                    "width": "100%",
                  }
                }
              >
                <span
                  data="text"
                  id="ae_start"
                  onClick={[Function]}
                  onInput={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                      "flex": "1",
                      "minHeight": "15px",
                      "padding": "0 4px",
                    }
                  }
                  tabIndex={1}
                />
              </span>
              <div
                style={
                  Object {
                    "left": "19px",
                    "pointerEvents": "none",
                    "position": "absolute",
                  }
                }
              >
                Add an output response
              </div>
            </div>
          </div>
          <div />
        </li>
        <ul
          className="mdc-list"
          style={
            Object {
              "margin": "0 8px 16px 8px",
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        />
      </div>
    </div>
    <div
      className="zui-expansion zui-color--white"
      style={
        Object {
          "margin": "12px",
        }
      }
    >
      <div
        className="zui-expansion-header"
        onClick={[Function]}
        style={
          Object {
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          className="zui-expansion-arrow"
        >
          <i
            className="zui-expansion-arrow-icon material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_down
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            className="zui-expansion-title"
            style={null}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "fontWeight": "900",
                }
              }
            >
              <i
                className="zrmc-icon"
                style={
                  Object {
                    "height": "24px",
                    "marginLeft": "-20px",
                    "marginRight": "16px",
                    "marginTop": "0px",
                    "width": "24px",
                  }
                }
              >
                <svg>
                  <path
                    d="M7.75,13C7.74,12.65 7.9,12.31 8.17,12.08C8.92,12.24 9.62,12.55 10.25,13C10.25,13.68 9.69,14.24 9,14.24C8.31,14.24 7.76,13.69 7.75,13M13.75,13C14.38,12.56 15.08,12.25 15.83,12.09C16.1,12.32 16.26,12.66 16.25,13C16.25,13.7 15.69,14.26 15,14.26C14.31,14.26 13.75,13.7 13.75,13V13M12,9C9.23,8.96 6.5,9.65 4.07,11L4,12C4,13.23 4.29,14.44 4.84,15.54C7.21,15.18 9.6,15 12,15C14.4,15 16.79,15.18 19.16,15.54C19.71,14.44 20,13.23 20,12L19.93,11C17.5,9.65 14.77,8.96 12,9M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z"
                    fill="#000000"
                  />
                </svg>
              </i>
              Advanced
              <i
                className="help_icon material-icons"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex="0"
              >
                help
              </i>
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="zui-expansion-content"
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        >
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              title
            </i>
            Topic
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="zui-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                {{%7B%7Btext%7D%7D}}&lt;&lt;%3C%3Cvar%3E%3E&gt;&gt;
              </button>
            </span>
          </li>
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              link
            </i>
            Previous
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="zui-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                NONE
              </button>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/intentDetail renders correctly 1`] = `
<div
  className="zui-action-panel list-box"
>
  <div
    className="list-content"
  >
    
    <div
      className="zui-expansion zui-color--white"
      style={
        Object {
          "margin": "12px",
        }
      }
    >
      <div
        className="zui-expansion-header"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          className="zui-expansion-arrow"
        >
          <i
            className="zui-expansion-arrow-icon material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            className="zui-expansion-title"
            style={null}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "fontWeight": "900",
                }
              }
            >
              <i
                className="material-icons"
                style={
                  Object {
                    "marginLeft": "-8px",
                    "paddingRight": "4px",
                    "paddingTop": "12px",
                  }
                }
              >
                account_circle
              </i>
              input
              <i
                className="help_icon material-icons"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex="0"
              >
                help
              </i>
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="zui-expansion-content"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        
        <li
          className="addActionItem  onFocusAction actionItem mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <div
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              aria-label="Add an input sentence"
              className="contenteditable"
              id="ae_content"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              spellCheck={false}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flex": 1,
                  "minHeight": "40px",
                }
              }
              tabIndex={0}
            >
              <span
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexWrap": "wrap",
                    "width": "100%",
                  }
                }
              >
                <span
                  data="text"
                  id="ae_start"
                  onClick={[Function]}
                  onInput={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                      "flex": "1",
                      "minHeight": "15px",
                      "padding": "0 4px",
                    }
                  }
                  tabIndex={1}
                />
              </span>
              <div
                style={
                  Object {
                    "left": "19px",
                    "pointerEvents": "none",
                    "position": "absolute",
                  }
                }
              >
                Add an input sentence
              </div>
            </div>
          </div>
          <div />
        </li>
        <ul
          className="mdc-list"
          style={
            Object {
              "margin": "0 8px 16px 8px",
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        />
      </div>
    </div>
    <div
      className="zui-expansion zui-color--white"
      style={
        Object {
          "margin": "12px",
        }
      }
    >
      <div
        className="zui-expansion-header"
        onClick={[Function]}
        style={
          Object {
            "height": "64px",
            "paddingTop": "4px",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          className="zui-expansion-arrow"
        >
          <i
            className="zui-expansion-arrow-icon material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_up
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            className="zui-expansion-title"
            style={null}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "fontWeight": "900",
                }
              }
            >
              <i
                className="material-icons"
                style={
                  Object {
                    "backgroundImage": "url(../images/opla-avatar.png)",
                    "backgroundPositionX": "2px",
                    "backgroundPositionY": "14px",
                    "backgroundRepeat": "no-repeat",
                    "backgroundSize": "20px",
                    "color": "transparent",
                    "marginLeft": "-8px",
                    "paddingRight": "4px",
                    "paddingTop": "12px",
                  }
                }
              >
                account_circle
              </i>
              output
              <i
                className="help_icon material-icons"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex="0"
              >
                help
              </i>
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="zui-expansion-content"
        style={
          Object {
            "display": "block",
            "height": "100%",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        
        <li
          className="addActionItem  onFocusAction actionItem mdc-list-item"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="menuitem"
          style={Object {}}
        >
          <div
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              aria-label="Add an output response"
              className="contenteditable"
              id="ae_content"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              spellCheck={false}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flex": 1,
                  "minHeight": "40px",
                }
              }
              tabIndex={0}
            >
              <span
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexWrap": "wrap",
                    "width": "100%",
                  }
                }
              >
                <span
                  data="text"
                  id="ae_start"
                  onClick={[Function]}
                  onInput={[Function]}
                  style={
                    Object {
                      "display": "inline-block",
                      "flex": "1",
                      "minHeight": "15px",
                      "padding": "0 4px",
                    }
                  }
                  tabIndex={1}
                />
              </span>
              <div
                style={
                  Object {
                    "left": "19px",
                    "pointerEvents": "none",
                    "position": "absolute",
                  }
                }
              >
                Add an output response
              </div>
            </div>
          </div>
          <div />
        </li>
        <ul
          className="mdc-list"
          style={
            Object {
              "margin": "0 8px 16px 8px",
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        />
      </div>
    </div>
    <div
      className="zui-expansion zui-color--white"
      style={
        Object {
          "margin": "12px",
        }
      }
    >
      <div
        className="zui-expansion-header"
        onClick={[Function]}
        style={
          Object {
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <div
          className="zui-expansion-arrow"
        >
          <i
            className="zui-expansion-arrow-icon material-icons"
            disabled={false}
            style={
              Object {
                "animation": null,
                "fontSize": "24px",
                "paddingTop": "8px",
                "textAlign": "center",
              }
            }
          >
            keyboard_arrow_down
          </i>
        </div>
        <div
          style={
            Object {
              "display": "flex",
              "width": "100%",
            }
          }
        >
          <div
            className="zui-expansion-title"
            style={null}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "fontWeight": "900",
                }
              }
            >
              <i
                className="zrmc-icon"
                style={
                  Object {
                    "height": "24px",
                    "marginLeft": "-20px",
                    "marginRight": "16px",
                    "marginTop": "0px",
                    "width": "24px",
                  }
                }
              >
                <svg>
                  <path
                    d="M7.75,13C7.74,12.65 7.9,12.31 8.17,12.08C8.92,12.24 9.62,12.55 10.25,13C10.25,13.68 9.69,14.24 9,14.24C8.31,14.24 7.76,13.69 7.75,13M13.75,13C14.38,12.56 15.08,12.25 15.83,12.09C16.1,12.32 16.26,12.66 16.25,13C16.25,13.7 15.69,14.26 15,14.26C14.31,14.26 13.75,13.7 13.75,13V13M12,9C9.23,8.96 6.5,9.65 4.07,11L4,12C4,13.23 4.29,14.44 4.84,15.54C7.21,15.18 9.6,15 12,15C14.4,15 16.79,15.18 19.16,15.54C19.71,14.44 20,13.23 20,12L19.93,11C17.5,9.65 14.77,8.96 12,9M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z"
                    fill="#000000"
                  />
                </svg>
              </i>
              Advanced
              <i
                className="help_icon material-icons"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="button"
                tabIndex="0"
              >
                help
              </i>
            </div>
          </div>
          
        </div>
      </div>
      <div
        className="zui-expansion-content"
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
          }
        }
      >
        <ul
          className="mdc-list"
        >
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              title
            </i>
            Topic
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="zui-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                some intent
              </button>
            </span>
          </li>
          <li
            className="mdc-list-item"
            onKeyPress={[Function]}
            role="menuitem"
          >
            <i
              aria-hidden="true"
              className="mdc-list-item__graphic material-icons"
            >
              link
            </i>
            Previous
            <span
              className="mdc-list-item__meta"
              onClick={null}
              onKeyUp={[Function]}
              role="button"
              tabIndex="0"
            >
              <button
                className="zui-action-button mdc-button"
                disabled={false}
                id={null}
                onClick={[Function]}
                type="button"
              >
                
                NONE
              </button>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
